--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ verify_ssl = true
 [packages]
 websocket-client = "*"
 requests = "*"
+signalr = "*"
+signalr-client = "*"
 
 [requires]
 python_version = "3.7"
